assets/main.scss
---
---

$text-color: #46433A;
$anchor-text-color: #CE534D;
$background-color: #F1EED9;
$overlay-color: rgba(241,238,217,0.9);

body {
	font-family: 'Montserrat', sans-serif;
	color: $text-color;
	background-color: $background-color;
	background: url('../images/bg.jpg') no-repeat center center fixed; 
	-webkit-background-size: cover;
	-moz-background-size: cover;
	-o-background-size: cover;
	background-size: cover;
	padding: 0;
    border: 0;
    width:100%; 
    height:100%; 
    margin: auto;
    position: absolute;
    top: 0; left: 0; bottom: 0; right: 0;
	overflow-y: hidden;
}

header,
main {
	padding: 0 20px;
}

.overlay {
	position: absolute;
    background-color: $overlay-color;
	width:100%; 
    min-height:100%; 
}
/*** wrapper div for both header and main ***/
.wrapper {
	margin-top: 10%;
}

/*** anchor tags ***/
a:link,
a:visited,
a:hover,
a:active {
	color: $anchor-text-color;
	text-decoration: none;
}

a:hover {
	text-decoration: underline;
}


/*** main content list ***/
.main-list-item {
	font-weight: bold;
	font-size: 1em;
	margin: 0.7em 0;
}

/* override the left margin added by font awesome for the main content list,
since it must be aligned with the content */
.fa-ul.main-list {
	margin-left: 0;
}

/* list icons */
.main-list-item-icon {
	width: 32px;
	color: $text-color;
}

/*** logo ***/
.logo-container {
	text-align: center;
}

.logo {
	width: 168px;
	height: 168px;
	display: inline-block;
	background-size: cover;
	border-radius: 50%;
	-moz-border-radius: 50%;
	border: 2px solid $background-color;
	box-shadow: 0 0 0 3px $text-color;
}

/*** author ***/
.author-container h1 {
	font-size: 2.8em;
	margin-top: 0;
	margin-bottom: 0;
	text-align: center;
}

/*** tagline ***/
.tagline-container p {
	font-size: 1.3em;
	text-align: center;
	margin-bottom: 2em;
}

.buttons-div {
	text-align: center;
}

/******/
hr {
	margin: 15px;
	border: 0;
	height: 1px;
	background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -moz-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -ms-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
	background-image: -o-linear-gradient(left, rgba(0,0,0,0), $text-color, rgba(0,0,0,0));
}

/*** footer ***/
footer {
	position: fixed;
	bottom: 0;
	right: 0;
	height: 20px;
}

.poweredby {
	font-family: "Arial Narrow", Arial;
	font-size: 0.6em;
	line-height: 0.6em;
	padding: 0 5px;
}

/*** media queries ***/
/* X-Small devices (phones, 480px and up) */
@media (min-width: 480px) {
	/* wrapper stays 480px wide past 480px wide and is kept centered */
	.wrapper {
		width: 480px;
		margin: 10% auto 0 auto;
	}
}


@media (min-width: 1030px) {

	.wrapper {
		width: 960px;
	}

	/* the header column stays left and has a dynamic width with all contents
	aligned right */
	header {
		float: left;
		width: 43%;
		text-align: right;
	}

	.author-container h1,
	.logo-container,
	.tagline-container p {
		text-align: center;
	}

	main {
		width: 49%;
		margin-left: 54%;
		padding: 0;
	}
}

